examples/configured-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configured
spec:
  volumes:
  - name: config
    configMap:
      name: app-config
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "echo $GREETING; echo password has ${#PASSWORD} characters; cat /etc/app/app.conf; sleep 3600"]
    volumeMounts:
    - name: config
      mountPath: /etc/app
