examples/toolbox.yaml
# A pod to look around the cluster network from, for example:
#   minikubectl exec toolbox -- nslookup web.default.svc.cluster.local
#   minikubectl exec toolbox -- wget -qO- http://web:8081
apiVersion: v1
kind: Pod
metadata:
  name: toolbox
spec:
  containers:
  - name: main
    image: busybox:1.36
    command: ["sleep", "86400"]
